--- a/config/database.yml
+++ b/config/database.yml
@@ -20,7 +20,7 @@ development:
   database: MIEA
   pool: 5
   username: root
-  password:
+  password: root
   socket: /var/run/mysqld/mysqld.sock
 
 # Warning: The database defined as "test" will be erased and
